브랜치 생성

--- a/Shopping_Project/WebContent/Index.html
+++ b/Shopping_Project/WebContent/Index.html
@@ -34,7 +34,7 @@
   </head>
   <body class="text-center">
     <form class="form-signin">
-  		<h1 class="h3 mb-3 font-weight-normal">냠냠 과일 파티</h1>
+  		<h1 class="h3 mb-3 font-weight-normal">☆냠냠 과일 파티☆</h1>
   		<label for="inputEmail" class="sr-only"> 아 이 디&nbsp;&nbsp;</label> 
   		<input type="text" id="inputid" class="form-control" placeholder="ID" required autofocus><br>
   		<label for="inputPassword" class="sr-only">비밀번호</label>
