--- a/Shopping_Project/WebContent/product_list.html
+++ b/Shopping_Project/WebContent/product_list.html
@@ -22,6 +22,7 @@
 	 
 	<hr>
 	<br>
+	데이터 연동 아직 안함 SPA로 만들기 전까지  임시로 붙여만두기
 	<div>
 		<img src="img.png" width="100px" style="float:left">
 		<ul style="float:left">
