--- a/Shopping_Project/WebContent/userInfoRewrite.html
+++ b/Shopping_Project/WebContent/userInfoRewrite.html
@@ -10,14 +10,14 @@
 
 <body class="text-center">
 	<fieldset align="center">
-		<legend>회원 가입</legend>
+		<legend>개인 정보 수정</legend>
 			<form align="left">
 				<label>아이디 </label><input type="text" required autofocus> <button>중복 확인</button><br>
 				<label>비밀번호 </label><input type="text"><br>
 				<label>이름 </label><input type="text"><br>
 				<label>전화번호 </label><input type="text"><br>
 				<label>주소 </label><input type="text"><br>
-				<button type="submit">로그인</button>
+				<button type="submit">수정 하기</button>
 				<Button>뒤로 가기</Button>
 			</form>
 	</fieldset>
