--- a/Shopping_Project/WebContent/product_list.html
+++ b/Shopping_Project/WebContent/product_list.html
@@ -25,7 +25,7 @@
 	데이터 연동 아직 안함 SPA로 만들기 전까지  임시로 붙여만두기
 	<div>
 		<img src="img.png" width="100px" style="float:left">
-		<ul style="float:left">
+		<ul style="float:left; list-style:none;">
 			<li>사과 5kg</li>
 			<li>16570  원</li>
 			<li>빨갛고 동그랗고 맛있는 사과</li>
