--- a/Shopping_Project/WebContent/orderSuccess.html
+++ b/Shopping_Project/WebContent/orderSuccess.html
@@ -23,7 +23,7 @@
 		<br><br><br>
 	</div>
 	<br><br><br>
-	<hr style="clear:left">
+	<hr style="float:clear">
 	<div>
 		<img src="img.png" width="100px" style="float:left">
 		<ul style="float:left; list-style:none;">
@@ -35,7 +35,7 @@
 		<br><br><br>
 	</div>
 	<br><br><br>
-	<hr style="clear:left">
+	<hr style="float:clear">
 	<div>
 		<img src="img.png" width="100px" style="float:left">
 		<ul style="float:left; list-style:none;">
@@ -47,7 +47,7 @@
 		<br><br><br>
 	</div>
 	<br><br><br>
-	<hr style="clear:left">
+	<hr style="float:clear">
 	<br>
 	<label><h3>합계 : 86080 원 </h3></label>
 	<div align="center"><button>구매 내역</button>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button>돌아가기</button></div>
