--- a/Shopping_Project/WebContent/Index.html
+++ b/Shopping_Project/WebContent/Index.html
@@ -14,6 +14,9 @@
 
     <link rel="stylesheet" href="/signin.css">
 
+ 	<link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/sign-in/">
+	<link href="../dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 
     <style>
       .bd-placeholder-img {
@@ -32,26 +35,26 @@
       }
 	</style>
 	
-	<link href="signin.css" rel="stylesheet">
-	<script src="app.js"></script>
-	
+    <link href="signin.css" rel="stylesheet">
   </head>
+
   <body class="text-center">
     <form class="form-signin">
-  		<h1 class="h3 mb-3 font-weight-normal">☆냠냠 과일 파티☆</h1>
-  		<label for="inputEmail" class="sr-only"> 아 이 디&nbsp;&nbsp;</label> 
-  		<input type="text" id="inputid" class="form-control" placeholder="ID" required autofocus><br>
-  		<label for="inputPassword" class="sr-only">비밀번호</label>
-  		<input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-	  <br>
-
-	<br><hr widht="30%"><br>
-	
+  <img src ="img.png">
+  <hr>
+  <h1 class="h3 mb-3 font-weight-normal">냠냠 과일 파티</h1>
+  <label for="inputEmail" class="sr-only">아이디</label>
+  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+  <label for="inputPassword" class="sr-only">비밀번호</label>
+  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+  <div class="checkbox mb-3">
+    <label>
+      <input type="checkbox" value="remember-me"> 아이디 기억
+    </label>
+  </div>
 	<button class="btn btn-lg btn-primary btn-block" type="submit">로그인</button>
-	<button class="btn btn-lg btn-primary btn-block" type="button">회원기임</button>
-  
-	<p class="mt-5 mb-3 text-muted">&copy; 2019-2019</p>
-	
-	</form>
+  	<button class="btn btn-lg btn-primary btn-block">회원가입</button>
+  <p class="mt-5 mb-3 text-muted">&copy; 2019-2019</p>
+</form>
 </body>
 </html>
