--- a/Shopping_Project/WebContent/Index.html
+++ b/Shopping_Project/WebContent/Index.html
@@ -44,7 +44,7 @@
 		<hr>
 		<h1 class="h3 mb-3 font-weight-normal">냠냠 과일 파티</h1>
 		<label for="inputEmail" class="sr-only">아이디</label>
-		<input type="email" id="inputEmail" class="form-control" placeholder="Email address" ng-model="inputId()" required autofocus>
+		<input type="email" id="inputEmail" class="form-control" placeholder="Email address" ng-model="inputId()" required autofocus><br>
 		<label for="inputPassword" class="sr-only">비밀번호</label>
 		<input type="password" id="inputPassword" class="form-control" placeholder="Password" ng-model="inputPasswd()" required>
 		<div class="checkbox mb-3">
@@ -55,7 +55,6 @@
 			<button class="btn btn-lg btn-primary btn-block" ng-click ="submit()" type="submit">로그인</button>
 			<button class="btn btn-lg btn-primary btn-block">회원가입</button>
 		<p class="mt-5 mb-3 text-muted">&copy; 2019-2019</p>
-		<p> 아이디 {{}} 비밀번호{{}}</p>
 	</form>
 
 </body>
