--- a/Shopping_Project/WebContent/userJoin.html
+++ b/Shopping_Project/WebContent/userJoin.html
@@ -31,7 +31,7 @@
 				<div class="login-group">
 					<div class="form-group">
 						<label> 아 이 디 </label>
-						<input type="text" class="form-control" id="reg_username" name="reg_username">
+						<input type="text" class="form-control" id="reg_userid" name="reg_userid">
 						<br><button class="btn btn-primary">중복 확인</button>
 					</div>
 					<div class="form-group">
@@ -45,11 +45,11 @@
 					
 					<div class="form-group">
 						<label>전화번호</label>
-						<input type="text" class="form-control" id="reg_email" name="reg_email">
+						<input type="text" class="form-control" id="reg_phone" name="reg_phone">
 					</div>
 					<div class="form-group">
 						<label> 주 소 </label>
-						<input type="text" class="form-control" id="reg_fullname" name="reg_fullname">
+						<input type="text" class="form-control" id="reg_address" name="reg_address">
 					</div>
 					
 				</div>
